# symphony-api

./: .gitignore  README.md  REFACTORING_REPORT.md  config.example.toml  config.toml  llms.txt  pyproject.toml  start.sh  symphony.sh
docs/: ai-integration.md  client-generation.md  configuration.md  integration.md
frontend/web/: package-lock.json  package.json  tsconfig.tsbuildinfo
scripts/: discover_models.py  sync_models.py
src/ai_cli_api/: models.py  service.py
src/hive_api/: service.py
src/hive_api/colony/: colony.py
src/hive_api/routes/: __init__.py  _deps.py  chat.py  providers.py  testlab.py
src/symphony/: config.py  score_store.py  service.py  shells.py
src/symphony/discovery/: discoverer.py  filters.py  providers.py
src/symphony/models/: __init__.py  chat.py  enums.py  provider.py
src/symphony/orchestra/: musician.py  orchestra.py  score.py
src/symphony/orchestra/musician/: executor.py
src/symphony/providers/: base.py  claude.py  kimi.py  options.py
src/symphony/routes/: __init__.py  chat.py  docs.py  testlab.py  updates.py
src/symphony/ui/: index.html
src/symphony/ui/static/: request.js  testlab.js
src/symphony/updater/: updater.py  version_checker.py
tests/: conftest.py  test_api.py  test_config.py  test_discovery.py  test_docs.py  test_drones.py  test_musicians.py  test_shells.py
tests/adapters/: test_claude.py  test_kimi.py
tests/fakes/: fake_cli.py
tests/ui_e2e/: conftest.py  test_failure_controls.py  test_streaming.py
tests/updater/: test_version_check.py
